# chili-iot

./: .clang-format  .clang-tidy  .containerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Containerfile  Makefile  README.md  container-build.sh  flash.sh  make_compile_commands.sh  pyproject.toml  qemu-mps2-an385.ld  requirements.txt  setup_env  stm32f103c8t6.ld
.devcontainer/: devcontainer.json
cmake/: arm-none-eabi-toolchain.cmake  bme280.cmake  chili_help.cmake  dependencies.cmake  dev_helpers.cmake  freertos.cmake  libopencm3.cmake  setup_secrets.cmake  static_analysis.cmake  style.cmake
newlib_syscalls/: newlib_syscalls.cpp
scripts/esp8266_test/: esp8266_test.py  mqtt_subscribe.py  run_broker.py  start_server.sh  udp_server.py
src/: ATCommand.h  AtCommandProcessor.h  BME280TemperatureSensor.cpp  BME280TemperatureSensor.h  BlinkyLED.cpp  BlinkyLED.h  DMA.cpp  DMA.h  ESP8266Network.h  Factories.h  FreeRTOSAdapter.cpp  FreeRTOSAdapter.h  FreeRTOSConfig.h  GPIO.cpp  GPIO.h  I2C.cpp  I2C.h  Logger.cpp  Logger.h  MQTTClient.h  Network.h  Peripheral.h  RTOSTasks.cpp  RTOSTasks.h  SensorNode.cpp  SensorNode.h  System.cpp  System.h  Temperature.cpp  Temperature.h  USART.cpp  USART.h  heap_useNewlib_bluepill.c  interrupts.cpp  interrupts.h  main.cpp  newlib_syscalls.cpp  syscalls.cpp  utils.cpp  utils.h
src/interfaces/: IDmaSerial.h  II2C.h  ILED.h  INetwork.h  IRTOS.h  ISerial.h  ITemperatureSensor.h
src/libs/SimpleMQTT/: SimpleMQTT.h
tests/: CMakeLists.txt  main_qemu.cpp  test_at_command_processor.cpp  test_blinky_led.cpp  test_bme280.cpp  test_dma.cpp  test_freertos_logs.cpp  test_gpio.cpp  test_i2c.cpp  test_logger.cpp  test_mqtt_packet.cpp  test_temperature.cpp  test_usart.cpp  test_utils.cpp
tests/mocks/: FreeRTOS.h  MockNetwork.h  MockRTOS.h  MockTemperatureSensor.h  mock_freertos.cpp  mock_freertos.h  mock_interrupts.cpp  mock_libopencm3.cpp  mock_libopencm3.h  queue.h  task.h  test_events.cpp  test_events.h  test_events_host.cpp
tests/mocks/libopencm3/cm3/: nvic.h  systick.h
tests/mocks/libopencm3/stm32/: dma.h  gpio.h  i2c.h  rcc.h  usart.h
tests/mocks/stubs/freertos/: mock_freertos.cpp
tests/mocks/stubs/freertos/freertos/: queue.h  task.h
tests/mocks/stubs/hal/libopencm3/cm3/: nvic.h  systick.h
tests/mocks/stubs/hal/libopencm3/stm32/: dma.h  gpio.h  i2c.h  rcc.h  usart.h
